# modelator-py

./: .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  HelloWorld.py  HelloWorld.tla  HelloWorld_tlc_pure.json  HelloWorld_tlc_raw.json  README.md  debug.txt  examples.md  output  pyproject.toml  usage.md
.github/workflows/: python.yml
mbt_python/: apalache.py  cli.py  mbt.py
modelator/: apalache.py  cli.py  helper.py  scratch0.py  scratch1.py  scratch2.py  scratch_1.py  scratch_2.py  scratch_subset_selection.py  staking0.py  staking1.py  staking1_aux.py  util.py
modelator/apalache/: apalache_api.txt  apalache_help_0.19.3.txt  apalache_help_0.23.0.txt  args.py  cli.py  pure.py  raw.py
modelator/parse/: apalache.py
modelator/tlc/: args.py  cli.py  pure.py  raw.py  tlc_api.txt  tlc_help_2.16.txt  tlc_help_2.18.txt
modelator/util/: cli.py  informal_trace_format.py
modelator/util/parse/: informal_trace_format.py  tlc_stdout.py
modelator/util/parse/tla/: README_license.md  __init__.py  _combinators.py  _error.py  _expr_parser.py  _intf.py  _location.py  _module_parser.py  _optable.py  _proof_parser.py  _tla_combinators.py  ast.py  iter.py  lex.py  parser.py  to_str.py  tokens.py  visit.py
modelator/util/parse/tlc/: state_to_informal_trace_format.py  stdout_to_informal_trace_format.py
modelator/util/tla/: README.md  _intf.py  _location.py  ast.py
modelator/util/tla/examples/: Counter.tla  parsing_tla_expressions.py  parsing_tla_modules.py  syntax_tree_visitor.py
modelator/util/tlc/: cli.py  itf.py  state_to_informal_trace_format.py  stdout_to_informal_trace_format.py
modelator_py/: cli.py  helper.py
modelator_py/apalache/: __init__.py  args.py  cli.py  pure.py  raw.py
modelator_py/tlc/: __init__.py  args.py  cli.py  pure.py  raw.py
modelator_py/util/tla/: LICENSE  __init__.py  _combinators.py  _expr_parser.py  _intf.py  _module_parser.py  _optable.py  _proof_parser.py  _tla_combinators.py  iter.py  to_str.py
modelator_py/util/tla/examples/: parsing_tla_expressions.py  (+2 more)
modelator_py/util/tlc/: __init__.py  cli.py  itf.py  state_to_informal_trace_format.py  stdout_to_informal_trace_format.py
samples/: .gitignore  Hello.tla  README.md  TlcTraces.out  cli_input_apalache_pure.json  cli_input_apalache_raw.json  cli_input_gen.py  cli_input_tlc_itf.json  cli_input_tlc_pure.json  cli_input_tlc_raw.json  foo.py  helper.py  library_usage.py  requirements.txt  usage.md
tests/: helper.py  test_apalache.py  test_mbt_python.py  test_modelator.py  test_tlc.py  util.py
tests/apalache/: test_apalache.py
tests/parse/: test_all.py
tests/resource/: .gitignore  2PossibleTraces.tla  2PossibleTracesTests.tla  2PossibleTracesTlc.cfg  HelloWorldTyped.tla  HelloWorld_tlc_pure.json  HelloWorld_tlc_raw.json  HelloWorld_util_tlc_itf.json  TlcLassoTraceParse.tla  TlcLassoTraceParse.txt  TlcMultipleTraceParse.tla  TlcMultipleTraceParseCutoff0.txt  TlcMultipleTraceParseCutoff1.txt  TlcMultipleTraceParseSimulationMode.txt  TlcMultipleTraceParse_RealWorld0.txt  TlcMultipleTraceParse_RealWorld0_Pretty.json  TlcMultipleTraceParse_RealWorld1.txt  TlcStateExpressionExample0.txt  TlcStateExpressionExample1.txt  TlcStateExpressionExample2.txt  TlcStateExpressionExample3.txt  TlcStateExpressionExample4.txt  TlcStateExpressionExample5.txt  TlcStateExpressionExample6.txt  TlcStateExpressionExample7.txt  TlcStateExpressionExample8.txt  TlcTraceAbsenceParse.txt  TlcTraceParse.json  TlcTraceParse.tla  TlcTraceParse.txt  TlcTraceParseInitState.txt  TlcTraceParseInitStateContinue.txt  TlcTraceParseSimpleState.tla  TlcTraceParseSimulationMode.txt  apalache_pure_example.json  apalache_raw_example.json  counterexample.tla  gen.py  tlc_pure_example.json  tlc_raw_example.json
tests/tlc/: test_tlc.py
tests/util/parse/: scratch.py  test_all.py  test_informal_trace_format.py  test_tlc_stdout.py
tests/util/tla/: README.md  lexer_test.py  parser_test.py  tlaps_lib_test.py
tests/util/tlc/: state_to_informal_trace_format_test.py  stdout_to_informal_trace_format_test.py
(+14 files in other folders)
