[tool.poetry]
name = "modelator_py"
version = "0.2.6"
description = "Lightweight utilities to assist model writing and model-based testing activities using the TLA+ ecosystem"
authors = ["Daniel Tisdall <daniel@informal.systems>", "Ivan Gavran <ivan@informal.systems>"]
readme = "README.md"
homepage = "https://mbt.informal.systems/"
repository = "https://github.com/informalsystems/modelator-py/"
documentation = "https://github.com/informalsystems/modelator-py/"
keywords = ["utility", "tla", "tlaplus", "tlc", "apalache"]

[tool.poetry.dependencies]
python = "^3.8"
fire = "^0.4"
infix = "^1.2"
ply = "^3.11"
pathos = "^0.3"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
black = {version = "^22.3.0", allow-prereleases = true}
pytest-cov = "^3.0.0"
pre-commit = "^2.15.0"
flake8 = "^4.0.1"
mypy = "^0.931"
isort = "^5.9.3"

[tool.poetry.scripts]
modelator = "modelator_py.cli:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88
profile = "black"
